--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.2",
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "sequelize": "^7.0.0-alpha.3"
   },
