--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "express-jwt": "^6.1.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
-    "sequelize": "^7.0.0-alpha.3"
+    "sequelize": "^7.0.0-alpha.3",
+    "sharp": "^0.30.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
