--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dottie": "^2.0.2",
     "express": "^4.17.2",
     "express-jwt": "^6.1.0",
+    "google-auth-library": "^7.12.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
