--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,14 @@ DB_TYPE=mysql
 
 # JWT
 JWT_SECRET=
-JWT_EXP=604800
+JWT_EXP=7d
+
+# LocationIQ
+LOCATIONIQ_KEY=
+
+# Google Service
+GOOGLE_AUTH_CLIENT_ID=
+
+# OneSignal push notification
+ONESIGNAL_API_KEY=
+ONESIGNAL_APP_ID=
